Fixed bugs and remove unused code
